PZ-168,PZ-169 | Zip parts menu option; Encrypt zip archive menu option for unencrypted open zip archives
+ Implemented split archive functionality.
+ Ensured the use of background task and progress form for both encrypt and split archive functionality in the Zip4j menu.
+ Added default options for Zip4j split archive size.

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/src/main/resources/zip4j_plugin.properties
+++ b/src/main/resources/zip4j_plugin.properties
@@ -38,6 +38,23 @@ title.ntak.pearl-zip.zip4j.issue-extracting-file=Issue extracting archive
 header.ntak.pearl-zip.zip4j.issue-extracting-file=The archive %s could not be extracted
 body.ntak.pearl-zip.zip4j.issue-extracting-file=Exception %s was thrown on the attempt to extract from the archive. Further details can be found below.
 
+title.ntak.pearl-zip.zip4j.validation-issue=Issue validating configuration of the archive
+body.ntak.pearl-zip.zip4j.validation-issue=Issue was observed on validating state of ArchiveInfo object. Issue observed: %s
+logging.ntak.pearl-zip.zip4j.pw-length=Password length is too short. Should be > 0 characters long.
+
+logging.ntak.pearl-zip.zip4j.issue-back-up=Issue backing up archive %s
+title.ntak.pearl-zip.zip4j.issue-back-up=Issue backing up archive %s
+header.ntak.pearl-zip.zip4j.issue-back-up=Archive could not be backed up
+body.ntak.pearl-zip.zip4j.issue-back-up=The encryption process could not complete due to an issue on the pre-requisite back up step. Please see stack trace for details.
+
+logging.ntak.pearl-zip.zip4j.incompatible-encrypt=Archive %s cannot be encrypted
+title.ntak.pearl-zip.zip4j.incompatible-encrypt=Incompatible archive for encryption
+body.ntak.pearl-zip.zip4j.incompatible-encrypt=Current archive (%s) is not an archive that the Zip4J plugin can encrypt. This could be because:\n• It is not a zip archive\n• It is a temporary archive\n• Archive is already encrypted
+
+logging.ntak.pearl-zip.zip4j.split-archive-failed=Archive %s could not be split. Exception message: %s.
+title.ntak.pearl-zip.zip4j.split-archive-failed=ERROR: Issue splitting archive
+header.ntak.pearl-zip.zip4j.split-archive-failed=Archive %s could not be split
+body.ntak.pearl-zip.zip4j.split-archive-failed=An exception was raised when trying to split archive %s. The process did not complete. Please see details below for more information.
 
 ###################################################################################################
 ######################################## NEW OPTIONS FORM LABELS ##################################
@@ -54,11 +71,24 @@ zip4j.new.options.encryption.strength.text=Encryption Strength:
 zip4j.new.options.description.text=The below options will help to configure Zip4j parameters when creating, augmenting or modifying the archive.
 
 ###################################################################################################
-######################################## PASSWORD FORM LABELS ##################################
+######################################## PASSWORD FORM LABELS #####################################
 ###################################################################################################
 
 zip4j.password.description.text=The open archive is an encrypted Zip archive. \nPlease specify the password in order to decrypt and read the contents of files within the archive:
 zip4j.password.continue=Continue
+zip4j.password.cancel=Cancel
 zip4j.options.description.text=Below, options have been presented to configure the Zip4j library within PearlZip.
 zip4j.options.default-compression-level.text=Default Compression Level: 
 zip4j.options.default-compression-method.text=Default Compression Method: 
+zip4j.encrypt.encrypt-prompt.text=The archive %s can be encrypted by Zip4J. \nPlease enter a password below to encrypt the archive with:
+zip4j.encrypt.encrypt-prompt.title=Encrypt archive
+zip4j.options.default-encryption-method.text=Default Encryption Method: 
+zip4j.options.default-encryption-strength.text=Default Encryption Strength: 
+zip4j.options.default-split-archive-size.text=Default Split Archive Size (B): 
+
+###################################################################################################
+######################################## Zip4j Menu ###############################################
+###################################################################################################
+
+zip4j.menu-item.split-archive.text=Split Archive
+zip4j.menu-item.encrypt-archive.text=Encrypt Archive
