PZ-183,PZ-186 | Make PZAX build script independent of deployment phase; Adding Changelog to the Zip4J plugin package
PZ-183:
+ Updated parameters for deployment script

PZ-186:
+ Added CHANGELOG file generation

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,7 @@
                             <arguments>
                                 <argument>${project.version}</argument>
                                 <argument>${deploy.settings.loc}</argument>
+                                <argument>${pearl-zip.version}</argument>
                             </arguments>
                             <environmentVariables>
                                 <JAVA_HOME>${jdk.location}</JAVA_HOME>
